load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "main_py",
    srcs = ["main.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        "//reboot/cli/common:cli_py",
    ],
)

py_binary(
    name = "rbt",
    srcs = [
        "main.py",
    ],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        "//reboot/cli/common:cli_py",
    ],
)
